// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engagement form fields Additional details form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="additional_details"
          >
            <span
              class="pf-c-form__label-text"
            >
              Additional Information
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <textarea
            aria-invalid="false"
            aria-label="Additional provisioning information"
            class="pf-c-form-control pf-m-resize-vertical"
            data-testid="additional-details-text-area"
            disabled=""
            id="additional_details"
            name="additional_details"
            placeholder="Provide additional details"
          >
            details
          </textarea>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="additional_details"
        >
          <span
            class="pf-c-form__label-text"
          >
            Additional Information
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <textarea
          aria-invalid="false"
          aria-label="Additional provisioning information"
          class="pf-c-form-control pf-m-resize-vertical"
          data-testid="additional-details-text-area"
          disabled=""
          id="additional_details"
          name="additional_details"
          placeholder="Provide additional details"
        >
          details
        </textarea>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Cloud provider form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="Hosting Platform"
          >
            <span
              class="pf-c-form__label-text"
            >
              Hosting Type
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            class="pf-c-form-control"
            data-ouia-component-id="0"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            disabled=""
            required=""
          >
            <option
              class=""
              value=""
            >
              OpenShift Container Platform
            </option>
          </select>
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="cloud-provider"
          >
            <span
              class="pf-c-form__label-text"
            >
              Cloud Provider
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Cloud Provider"
            class="pf-c-form-control"
            data-ouia-component-id="1"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="cloud-provider-select"
            disabled=""
            id="cloud_provider_dropdown"
            required=""
          >
            <option
              class=""
              value=""
            >
              Select a provider
            </option>
            <option
              class=""
              data-cy="AWS"
              value="ec2"
            >
              AWS
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="Hosting Platform"
        >
          <span
            class="pf-c-form__label-text"
          >
            Hosting Type
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          class="pf-c-form-control"
          data-ouia-component-id="0"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          disabled=""
          required=""
        >
          <option
            class=""
            value=""
          >
            OpenShift Container Platform
          </option>
        </select>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="cloud-provider"
        >
          <span
            class="pf-c-form__label-text"
          >
            Cloud Provider
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Cloud Provider"
          class="pf-c-form-control"
          data-ouia-component-id="1"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="cloud-provider-select"
          disabled=""
          id="cloud_provider_dropdown"
          required=""
        >
          <option
            class=""
            value=""
          >
            Select a provider
          </option>
          <option
            class=""
            data-cy="AWS"
            value="ec2"
          >
            AWS
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Cloud provider region form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="cloud-provider-region"
          >
            <span
              class="pf-c-form__label-text"
            >
              Provider Region
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Cloud provider region"
            class="pf-c-form-control"
            data-ouia-component-id="4"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="provider-region-select"
            disabled=""
            id="cloud_provider_region_dropdown"
          >
            <option
              class=""
              value=""
            >
              Select a region
            </option>
            <option
              class=""
              data-cy="nva"
              disabled=""
              value="nva"
            >
              N. Virginia
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="cloud-provider-region"
        >
          <span
            class="pf-c-form__label-text"
          >
            Provider Region
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Cloud provider region"
          class="pf-c-form-control"
          data-ouia-component-id="4"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="provider-region-select"
          disabled=""
          id="cloud_provider_region_dropdown"
        >
          <option
            class=""
            value=""
          >
            Select a region
          </option>
          <option
            class=""
            data-cy="nva"
            disabled=""
            value="nva"
          >
            N. Virginia
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Cluster size form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="cluster-size"
          >
            <span
              class="pf-c-form__label-text"
            >
              Cluster Size
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Cluster Size"
            class="pf-c-form-control"
            data-ouia-component-id="7"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="cluster-size-select"
            disabled=""
            id="cluster_size_dropdown"
            required=""
          >
            <option
              class=""
              value=""
            >
              Select cluster size
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="cluster-size"
        >
          <span
            class="pf-c-form__label-text"
          >
            Cluster Size
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Cluster Size"
          class="pf-c-form-control"
          data-ouia-component-id="7"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="cluster-size-select"
          disabled=""
          id="cluster_size_dropdown"
          required=""
        >
          <option
            class=""
            value=""
          >
            Select cluster size
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields OpenShift Version form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="openshift-provider"
          >
            <span
              class="pf-c-form__label-text"
            >
              OpenShift Version
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="OpenShift Version"
            class="pf-c-form-control"
            data-ouia-component-id="13"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="oc-version-select"
            disabled=""
            id="oc_version_dropdown"
          >
            <option
              class=""
              value=""
            >
              Select OpenShift version
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="openshift-provider"
        >
          <span
            class="pf-c-form__label-text"
          >
            OpenShift Version
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="OpenShift Version"
          class="pf-c-form-control"
          data-ouia-component-id="13"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="oc-version-select"
          disabled=""
          id="oc_version_dropdown"
        >
          <option
            class=""
            value=""
          >
            Select OpenShift version
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Persistent storage form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="persistent-storage-needs"
          >
            <span
              class="pf-c-form__label-text"
            >
              Persistent Storage Needs
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Persistent Storage Needs"
            class="pf-c-form-control"
            data-ouia-component-id="19"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="persistent-storage-select"
            disabled=""
            id="persistent_storage_dropdown"
          >
            <option
              class=""
              value=""
            >
              Select storage size
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="persistent-storage-needs"
        >
          <span
            class="pf-c-form__label-text"
          >
            Persistent Storage Needs
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Persistent Storage Needs"
          class="pf-c-form-control"
          data-ouia-component-id="19"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="persistent-storage-select"
          disabled=""
          id="persistent_storage_dropdown"
        >
          <option
            class=""
            value=""
          >
            Select storage size
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Subdomain form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="subdomain"
          >
            <span
              class="pf-c-form__label-text"
            >
              Desired Subdomain
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            class="pf-c-form-control"
            data-cy="desired_subdomain_input"
            data-testid="desired_subdomain_input"
            disabled=""
            id="ocp_sub_domain"
            name="ocp_sub_domain"
            required=""
            type="text"
            value="ordoabchao"
          />
          <div>
            Applications will live at: 
            <strong>
              ordoabchao
            </strong>
            <span
              style="font-style: italic;"
            >
              .region.example.com
            </span>
              
            <svg
              aria-describedby="pf-tooltip-1"
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                transform=""
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="subdomain"
        >
          <span
            class="pf-c-form__label-text"
          >
            Desired Subdomain
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          data-cy="desired_subdomain_input"
          data-testid="desired_subdomain_input"
          disabled=""
          id="ocp_sub_domain"
          name="ocp_sub_domain"
          required=""
          type="text"
          value="ordoabchao"
        />
        <div>
          Applications will live at: 
          <strong>
            ordoabchao
          </strong>
          <span
            style="font-style: italic;"
          >
            .region.example.com
          </span>
            
          <svg
            aria-describedby="pf-tooltip-1"
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
